--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -97,6 +101,28 @@
         android:text="Sign Up"
         android:textSize="16dp"
         android:background="@drawable/round_border"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <ImageButton
+        android:id="@+id/google_signIn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/google2"
+        android:background="#f2f2f2"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="12dp"/>
+    <ImageButton
+        android:id="@+id/facebook_signIn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/facebook_2"
+        android:background="#f2f2f2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"/>
+    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -118,5 +144,10 @@
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="Sign In"/>
+
    </LinearLayout>
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"/>
 </LinearLayout>
+</ScrollView>
