--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".SettingsActivity"
-android:background="@color/contentBodyColor">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SettingsActivity"
+    android:orientation="vertical"
+    android:background="#f2f2f2">
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="655dp">
 
         <LinearLayout
             android:id="@+id/linear"
@@ -36,6 +37,7 @@ android:background="@color/contentBodyColor">
                     android:layout_height="60dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginRight="10dp"
+                    android:background="#f2f2f2"
                     android:src="@drawable/profile_icon"
                     tools:ignore="MissingClass" />
 
@@ -89,14 +91,14 @@ android:background="@color/contentBodyColor">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Metric"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/Blue" />
 
                 <RadioButton
                     android:id="@+id/rbMiles"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Imperial"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/Blue" />
             </RadioGroup>
 
             <TextView
@@ -111,18 +113,32 @@ android:background="@color/contentBodyColor">
 
             <TextView
                 style="@style/viewParent.headerText.settingsMiniTitle"
-                android:text="Regional" />
+                android:text="Languages" />
 
-            <TextView
+           <!-- <TextView
                 style="@style/viewParent.headerText.settingsTextIcon"
+                android:layout_width="354dp"
                 android:drawableLeft="@drawable/ic_languages"
-                android:text="Language" />
+                android:text="Language" />-->
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <RadioButton
+                    android:id="@+id/Afrikaans"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Afrikaans"
+                    android:textColor="@color/Blue" />
 
-            <TextView
-                style="@style/viewParent.headerText.settingsTextIcon"
-                android:drawableLeft="@drawable/logout"
-                android:text="Logout" />
+                <RadioButton
+                    android:id="@+id/Spanish"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Spanish"
+                    android:textColor="@color/Blue" />
+            </RadioGroup>
 
            <Space
                android:layout_width="match_parent"
@@ -140,4 +156,4 @@ android:background="@color/contentBodyColor">
         app:itemIconTint="@color/Blue"
         app:itemTextColor="@color/Blue"
         app:menu="@menu/bottom_nav" />
-</RelativeLayout>
+</LinearLayout>
