--- a/app/src/main/res/layout/activity_routes.xml
+++ b/app/src/main/res/layout/activity_routes.xml
@@ -76,7 +76,7 @@
 
         <EditText
             android:id="@+id/searchPlace"
-            android:layout_width="50dp"
+            android:layout_width="213dp"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
@@ -119,6 +119,17 @@
             android:background="@drawable/buttonstyle"
             android:fontFamily="sans-serif-condensed"
             android:text="➦"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+        <Button
+            android:id="@+id/end_btn"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/buttonstyle2"
+            android:text="✖"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
