--- a/app/src/main/res/layout/activity_fav.xml
+++ b/app/src/main/res/layout/activity_fav.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".FavActivity">
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="659dp"
     tools:context=".FavActivity" />
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottom_nav"
+android:layout_width="match_parent"
+android:layout_height="70dp"
+android:layout_below="@id/map"
+android:layout_marginTop="0dp"
+app:itemIconTint="@color/Blue"
+app:itemTextColor="@color/Blue"
+app:menu="@menu/bottom_nav" />
+</RelativeLayout>
